syntax = "proto3";

package idl;

service CliToHub {
    rpc Ping(PingRequest) returns (PingReply) {}
    rpc StatusUpgrade(StatusUpgradeRequest) returns (StatusUpgradeReply) {}
    rpc StatusConversion(StatusConversionRequest) returns (StatusConversionReply) {}
    rpc CheckConfig(CheckConfigRequest) returns (CheckConfigReply) {}
    rpc CheckSeginstall(CheckSeginstallRequest) returns (CheckSeginstallReply) {}
    rpc CheckObjectCount(CheckObjectCountRequest) returns (CheckObjectCountReply) {}
    rpc CheckVersion (CheckVersionRequest) returns (CheckVersionReply) {}
    rpc CheckDiskSpace (CheckDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
    rpc PrepareInitCluster (PrepareInitClusterRequest) returns (PrepareInitClusterReply) {}
    rpc PrepareShutdownClusters (PrepareShutdownClustersRequest) returns (PrepareShutdownClustersReply) {}
    rpc UpgradeConvertMaster (UpgradeConvertMasterRequest) returns (stream Chunk) {}
    rpc PrepareStartAgents (PrepareStartAgentsRequest) returns (PrepareStartAgentsReply) {}
    rpc UpgradeCopyMasterDataDir (UpgradeCopyMasterDataDirRequest) returns (UpgradeCopyMasterDataDirReply) {}
    rpc UpgradeValidateStartCluster (UpgradeValidateStartClusterRequest) returns (UpgradeValidateStartClusterReply) {}
    rpc UpgradeConvertPrimaries (UpgradeConvertPrimariesRequest) returns (UpgradeConvertPrimariesReply) {}
    rpc UpgradeReconfigurePorts (UpgradeReconfigurePortsRequest) returns (UpgradeReconfigurePortsReply) {}
    rpc SetConfig (SetConfigRequest) returns (SetConfigReply) {}
    rpc GetConfig (GetConfigRequest) returns (GetConfigReply) {}
}

message UpgradeReconfigurePortsRequest {}
message UpgradeReconfigurePortsReply {}

message UpgradeConvertPrimariesRequest {}
message UpgradeConvertPrimariesReply {}

message UpgradeCopyMasterDataDirRequest {}
message UpgradeCopyMasterDataDirReply {}

message UpgradeValidateStartClusterRequest {}
message UpgradeValidateStartClusterReply {}

message PingRequest {}
message PingReply {}

message StatusConversionRequest {}

message PrimaryStatus {
    StepStatus Status = 1;
    int32 Dbid = 2;
    int32 Content = 3;
    string Hostname = 4;
}

message StatusConversionReply {
    repeated PrimaryStatus conversionStatuses = 1;
}

message StatusUpgradeRequest {}

message StatusUpgradeReply {
    repeated UpgradeStepStatus listOfUpgradeStepStatuses = 1;
}

message UpgradeStepStatus {
    UpgradeSteps step = 1;
    StepStatus status = 2;
}

enum UpgradeSteps {
    UNKNOWN_STEP = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    CONFIG = 1;
    SEGINSTALL = 2;
    START_AGENTS = 3;
    INIT_CLUSTER = 4;
    SHUTDOWN_CLUSTERS = 5;
    CONVERT_MASTER = 6;
    COPY_MASTER = 7;
    CONVERT_PRIMARIES = 8;
    VALIDATE_START_CLUSTER = 9;
    RECONFIGURE_PORTS = 10;
}

enum StepStatus {
    UNKNOWN_STATUS = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    PENDING = 1;
    RUNNING = 2;
    COMPLETE = 3;
    FAILED = 4;
}

message CheckConfigRequest {}

// Consider removing the status as errors are/should be put on the error field.
message CheckConfigReply {
    string ConfigStatus  = 1;
}

message CheckSeginstallRequest {}
message CheckSeginstallReply {}

message PrepareStartAgentsRequest {}
message PrepareStartAgentsReply {}

message CountPerDb {
    string DbName = 1;
    int32 AoCount = 2;
    int32 HeapCount = 3;
}
message CheckObjectCountRequest {}

message CheckObjectCountReply {
    repeated CountPerDb ListOfCounts = 1;
}

message CheckVersionRequest {}

message CheckVersionReply {
    bool IsVersionCompatible = 1;
}

message CheckDiskSpaceRequest {}

message CheckDiskSpaceReply {
    repeated string SegmentFileSysUsage = 1;
}

message PrepareShutdownClustersRequest {}
message PrepareShutdownClustersReply {}

message PrepareInitClusterRequest {}
message PrepareInitClusterReply {}

message UpgradeConvertMasterRequest {}
message Chunk {
  bytes buffer = 1;
  enum Type {
    UNKNOWN = 0;
    STDOUT = 1;
    STDERR = 2;
  }
  Type type = 2;
}

message SetConfigRequest {
    string name = 1;
    string value = 2;
}
message SetConfigReply {}

message GetConfigRequest {
    string name = 1;
}
message GetConfigReply {
    string value = 1;
}
